fix: additional broken styles fixes

--- a/packages/app-admin/src/styles/material-theme-assignments.scss
+++ b/packages/app-admin/src/styles/material-theme-assignments.scss
@@ -7,7 +7,9 @@
 @use "@material/tab/mixins" as tab;
 @use "@material/tab-indicator/mixins" as tabIndicator;
 @use "@material/list/mixins" as list;
+@use "@material/switch" as switch;
 @use "@material/textfield/mixins" as textfield;
+@use "@material/select/mixins" as select;
 @use "@material/checkbox/mixins" as checkbox;
 @use "@material/radio/mixins" as radio;
 @use "@material/snackbar/mixins" as snackbar;
@@ -118,6 +120,10 @@
     color: $mdc-theme-text-primary-on-background;
   }
 
+  .mdc-deprecated-list-item__ripple {
+    overflow: hidden;
+  }
+
   .mdc-deprecated-list-item:hover,
   .mdc-deprecated-list-item::after,
   .mdc-deprecated-list-item::before {
@@ -128,6 +134,40 @@
       background-color: $mdc-theme-text-hint-on-dark;
       cursor: pointer;
     }
+  }
+}
+
+// switch
+.mdc-switch {
+  @include switch.theme-styles(
+    (
+      selected-focus-handle-color: $mdc-theme-secondary,
+      selected-focus-state-layer-color: $mdc-theme-secondary,
+      selected-focus-track-color: rgba($mdc-theme-secondary, 0.54),
+      selected-handle-color: $mdc-theme-secondary,
+      selected-hover-handle-color: $mdc-theme-secondary,
+      selected-hover-state-layer-color: $mdc-theme-secondary,
+      selected-hover-track-color: rgba($mdc-theme-secondary, 0.54),
+      selected-pressed-handle-color: $mdc-theme-secondary,
+      selected-pressed-state-layer-color: $mdc-theme-secondary,
+      selected-pressed-track-color: rgba($mdc-theme-secondary, 0.54),
+      selected-track-color: rgba($mdc-theme-secondary, 0.54),
+      unselected-focus-handle-color: $mdc-theme-surface,
+      unselected-focus-track-color: rgba($mdc-theme-on-surface, 0.38),
+      unselected-handle-color: $mdc-theme-surface,
+      unselected-hover-handle-color: $mdc-theme-surface,
+      unselected-hover-track-color: rgba($mdc-theme-on-surface, 0.38),
+      unselected-pressed-handle-color: $mdc-theme-surface,
+      unselected-pressed-track-color: rgba($mdc-theme-on-surface, 0.38),
+      unselected-track-color: rgba($mdc-theme-on-surface, 0.38)
+    )
+  );
+
+  margin-left: 5px;
+  margin-right: 10px;
+
+  .mdc-switch__icons {
+    display: none;
   }
 }
 
@@ -252,6 +292,49 @@ Fix the width of input components when inside grids
   &.mdc-dialog--open .mdc-dialog__scrim {
     opacity: 0.7;
     background-color: var(--mdc-theme-on-surface);
+  }
+}
+
+// select
+.mdc-select {
+  width: 100%;
+  @include select.ink-color($mdc-theme-text-primary-on-background);
+  @include select.label-color($mdc-theme-text-secondary-on-background);
+  @include select.bottom-line-color(
+    (
+      default: $mdc-theme-text-secondary-on-background,
+      hover: $mdc-theme-text-primary-on-background
+    )
+  );
+  @include select.container-fill-color($mdc-theme-on-background);
+  @include select.filled-shape-radius(0);
+  @include select.outline-shape-radius(2);
+  @include select.dropdown-icon-color(
+    (
+      default: $mdc-theme-text-primary-on-background,
+      focused: $mdc-theme-primary
+    )
+  );
+
+  /*
+  Fix for select box appearance. For some reason browser prefix css attributes are striped away.
+   */
+  .mdc-select__native-control {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border-radius: 2px;
+  }
+
+  &.mdc-select--box {
+    border-radius: 2px;
+    .mdc-select__native-control {
+      padding-top: 10px;
+    }
+  }
+  &:not(.mdc-select--disabled).mdc-select--focused {
+    .mdc-floating-label {
+      color: rgba(0, 0, 0, 0.6);
+    }
   }
 }
 
